# I3lani_v1

./: .env.example  .gitignore  .replit  ADMIN_CONTROL_PANEL_GUIDE.md  BACKGROUND_WORKERS_GUIDE.md  BUG_FIX_REPORT.md  BUTTON_FUNCTIONALITY_REPORT.md  CHANNEL_MANAGEMENT_GUIDE.md  CHANNEL_OWNER_INCENTIVES.md  CLOUD_RUN_DEPLOYMENT_GUIDE.md  COMPETITOR_ANALYSIS.md  COMPLETE_ADMIN_SYSTEM.md  CONFLICT_RESOLUTION.md  CONTENT_MODERATION_GUIDE.md  CONTRIBUTING.md  CORE_FEATURES_STATUS.md  CRYPTO_LANGUAGE_STYLE_REPORT.md  DEBUG_INSTRUCTIONS.md  DEBUG_SYSTEM_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPARISON.md  DEPLOYMENT_FIXES_APPLIED.md  DEPLOYMENT_FIXES_SUMMARY.md  DEPLOYMENT_README.md  DEPLOYMENT_SOLUTION.md  DURATION_SELECTION_BUG_VALIDATION.md  Dockerfile  ENHANCED_FEATURES_SUMMARY.md  ENHANCED_STARS_PAYMENT_DOCUMENTATION.md  ENHANCED_STARS_PAYMENT_SUMMARY.md  ENHANCED_SYSTEM_SUMMARY.md  ENVIRONMENT_VARIABLES_SETUP.md  FLOW_ENHANCEMENT_ANALYSIS.md  GITHUB_UPLOAD_CHECKLIST.md  GITHUB_UPLOAD_GUIDE.md  GLOBAL_SEQUENCE_SYSTEM_REPORT.md  HAPTIC_VISUAL_EFFECTS_SUMMARY.md  HEROKU_DEPLOYMENT_GUIDE.md  I3LANI_COMPLIANCE_SUMMARY.md  I3LANI_V3_DEPLOYMENT_GUIDE.md  (+522 more)
attached_assets/: I3laniBotNewPricingA_1752519350130.md  I3lani_bot_New_1_1752487404807.md  I3lani_new_1752475838064.md  I3laniv3_1752491013112.md  Pasted--Bug-Report-002-Language-Reset-After-Selection-Bot-Reverts-to-English-Step-Identif-1752079048761_1752079048764.txt  Pasted--Bug-Report-Ad-Summary-Step-Language-Payment-Button-Issues-Step-Identifier-Creat-1752082953414_1752082953417.txt  i3chicklist_1752505740724.md  (+5 more)
(+10 files in other folders)
